# pi-ui

./: .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: architecture.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/main/: main.ts  pi-session.ts  preload.ts
src/renderer/: App.tsx  index.html  styles.css  vite-env.d.ts
src/shared/: ipc.ts  rpc.ts
