[package]
name = "pi-ui"
version = "0.1.0"
description = "Desktop workbench for pi-agent"
authors = ["Haohui-W"]
edition = "2021"

[lib]
name = "pi_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
